feat: Update branding from InspireAI to AIspire Africa Network across all components and documentation

--- a/index.html
+++ b/index.html
@@ -5,41 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>
-      InspireAI Africa Network – Empowering Africa's Future Through AI &
+      AIspire Africa Network – Empowering Africa's Future Through AI &
       Robotics
     </title>
 
     <meta
       name="description"
-      content="Empowering African youth and professionals through AI, robotics, and digital skills. Join InspireAI Africa Network for bootcamps, training programs, and corporate workshops."
+      content="Empowering African youth and professionals through AI, robotics, and digital skills. Join AIspire Africa Network for bootcamps, training programs, and corporate workshops."
     />
-    <meta name="author" content="InspireAI Africa Network" />
+    <meta name="author" content="AIspire Africa Network" />
     <meta
       name="keywords"
-      content="AI training Africa, robotics bootcamp, digital skills, youth empowerment, tech education, AI literacy, InspireAI Africa"
+      content="AI training Africa, robotics bootcamp, digital skills, youth empowerment, tech education, AI literacy, AIspire Africa"
     />
 
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="InspireAI Africa Network – Empowering Africa's Future Through AI & Robotics"
+      content="AIspire Africa Network – Empowering Africa's Future Through AI & Robotics"
     />
     <meta
       property="og:description"
-      content="Empowering African youth and professionals through AI, robotics, and digital skills. Join InspireAI Africa Network for bootcamps, training programs, and corporate workshops."
+      content="Empowering African youth and professionals through AI, robotics, and digital skills. Join AIspire Africa Network for bootcamps, training programs, and corporate workshops."
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://yourdomain.com/assets/inspireai-og-image.png"
+      content="https://yourdomain.com/assets/aispireafrica-og-image.png"
     />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@InspireAIAfrica" />
+    <meta name="twitter:site" content="@AIspireAfrica" />
     <meta
       name="twitter:image"
-      content="https://yourdomain.com/assets/inspireai-og-image.png"
+      content="https://yourdomain.com/assets/aispireafrica-og-image.png"
     />
 
     <!-- Google Fonts -->
