feat: remove unused files, update site metadata, and implement sitemap generation
- Deleted robots.txt, site.webmanifest, and vite.svg files.
- Updated Open Graph and Twitter meta tags in index.html with the correct domain.
- Added sitemap generation script and integrated it into the build process.
- Created a new 404 illustration and updated the NotFound page with improved layout and navigation.
- Introduced responsive utility classes in responsive.css for better mobile support.
- Added OptimizedImage component for handling image loading and error states.
- Implemented useBreakpoint hook for responsive design handling.
- Updated Footer component with the correct contact email.
- Enhanced styles in index.css for better visual consistency.
- Added generateSitemap utility to create a sitemap.xml file based on defined routes.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://yourdomain.com/assets/aispireafrica-og-image.png"
+      content="https://aispireafrica.com/assets/aispireafrica-og-image.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -39,7 +39,7 @@
     <meta name="twitter:site" content="@AIspireAfrica" />
     <meta
       name="twitter:image"
-      content="https://yourdomain.com/assets/aispireafrica-og-image.png"
+      content="https://aispireafrica.com/assets/aispireafrica-og-image.png"
     />
 
     <!-- Google Fonts -->
